--- a/package.json
+++ b/package.json
@@ -266,8 +266,7 @@
     "win-ca": "^3.5.0",
     "winston": "^3.8.2",
     "winston-transport-browserconsole": "^1.0.5",
-    "ws": "^8.11.0",
-    "xterm-link-provider": "^1.3.1"
+    "ws": "^8.11.0"
   },
   "devDependencies": {
     "@async-fn/jest": "1.6.4",
@@ -412,6 +411,10 @@
     "webpack-dev-server": "^4.11.1",
     "webpack-node-externals": "^3.0.0",
     "xterm": "^5.0.0",
-    "xterm-addon-fit": "^0.5.0"
+    "xterm-addon-fit": "^0.5.0",
+    "xterm-addon-search": "^0.10.0",
+    "xterm-addon-web-links": "^0.7.0",
+    "xterm-addon-webgl": "^0.13.0",
+    "xterm-link-provider": "^1.3.1"
   }
 }
