--- a/templates/create-resource/ClusterRole.yaml
+++ b/templates/create-resource/ClusterRole.yaml
@@ -83,6 +83,8 @@ rules:
     resources:
       - horizontalpodautoscalers
       - horizontalpodautoscalers/status
+      - verticalpodautoscalers
+      - verticalpodautoscalers/status
     verbs:
       - get
       - list
