--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ static/build
 static/types
 binaries/client/
 binaries/server/
+src/extensions/*/*.js
+src/extensions/*/*.d.ts
+types/extension-api.d.ts
+types/extension-renderer-api.d.ts
+extensions/*/dist
 docs/extensions/api
 site/
 build/webpack/
