--- a/package.json
+++ b/package.json
@@ -94,7 +94,13 @@
     "bundledHelmVersion": "3.7.2",
     "sentryDsn": "",
     "contentSecurityPolicy": "script-src 'unsafe-eval' 'self'; frame-src http://*.localhost:*/; img-src * data:",
-    "welcomeRoute": "/welcome"
+    "welcomeRoute": "/welcome",
+    "extensions": [
+      "kube-object-event-status",
+      "metrics-cluster-feature",
+      "node-menu",
+      "pod-menu"
+    ]
   },
   "engines": {
     "node": ">=16 <17"
@@ -266,9 +272,14 @@
     "joi": "^17.7.0",
     "js-yaml": "^4.1.0",
     "jsdom": "^16.7.0",
+    "kube-object-event-status": "file:./extensions/kube-object-event-status",
+    "lens-metrics-cluster-feature": "file:./extensions/metrics-cluster-feature",
+    "lens-node-menu": "file:./extensions/node-menu",
+    "lens-pod-menu": "file:./extensions/pod-menu",
     "lodash": "^4.17.15",
     "marked": "^4.2.4",
     "md5-file": "^5.0.0",
+    "metrics-cluster-feature": "file:./extensions/metrics-cluster-feature",
     "mobx": "^6.7.0",
     "mobx-observable-history": "^2.0.3",
     "mobx-react": "^7.6.0",
@@ -277,10 +288,12 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.40",
     "node-fetch": "^3.3.0",
+    "node-menu": "file:./extensions/node-menu",
     "node-pty": "0.10.1",
     "npm": "^8.19.3",
     "p-limit": "^3.1.0",
     "path-to-regexp": "^6.2.0",
+    "pod-menu": "file:./extensions/pod-menu",
     "proper-lockfile": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
