Revert "Include bundled extensions in package.json (#6715)"
This reverts commit 012944d5623adb99d863bd07e873b47e9c7ec627.

--- a/extensions/kube-object-event-status/package.json
+++ b/extensions/kube-object-event-status/package.json
@@ -8,7 +8,7 @@
     "styles": []
   },
   "scripts": {
-    "build": "npx webpack",
+    "build": "npx webpack && npm pack",
     "dev": "npx webpack -- --watch",
     "test": "echo NO TESTS"
   },
