--- a/extensions/metrics-cluster-feature/package.json
+++ b/extensions/metrics-cluster-feature/package.json
@@ -8,7 +8,7 @@
     "styles": []
   },
   "scripts": {
-    "build": "npx webpack",
+    "build": "npx webpack && npm pack",
     "dev": "npx webpack -- --watch",
     "test": "npx jest --passWithNoTests --env=jsdom src $@",
     "clean": "rm -rf dist/ && rm *.tgz"
